--- a/.gitignore
+++ b/.gitignore
@@ -354,4 +354,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,webstorm+all,visualstudiocode,node,svelte
-    
+
+.wrangler
+project.inlang
